--- a/src/web-ui/src/routes/tests/index.css
+++ b/src/web-ui/src/routes/tests/index.css
@@ -2,52 +2,5 @@
     display: flex;
     flex-wrap: wrap;
     gap: 4px;
-}
-
-
-.element {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    margin: 0;
-}
-.element > * {
-    margin: 0;
-    padding: 0;
-}
-.element > .border {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 50px;
-    height: 50px;
-
-    background-color: rgb(255,215,0);
-    background: radial-gradient(circle, rgba(255,215,0,1) 0%, rgba(255,180,0,1) 50%, rgba(255,250,0,1) 100%);
-}
-.element > .background {
-    position: absolute;
-    top: 4px;
-    left: 4px;
-    width: 42px;
-    height: 42px;
-
-    background-color: black;
-}
-.element > .number {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    font-size: small;
-
-    color: gold;
-}
-.element > .symbol {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    color: gold;
-    font-weight: bold;
+    padding: 4px;
 }
