--- a/src/web-ui/src/routes/navbar/index.css
+++ b/src/web-ui/src/routes/navbar/index.css
@@ -1,7 +1,7 @@
 /* navbar itself */
 .navbar {
     height: 50px;
-    background: rgb(255,215,0);
+    background-color: rgb(255,215,0);
     background: radial-gradient(circle, rgba(255,215,0,1) 0%, rgba(255,180,0,1) 50%, rgba(255,250,0,1) 100%);
     position: relative;
 }
