--- a/src/web-ui/src/routes/home/index.css
+++ b/src/web-ui/src/routes/home/index.css
@@ -1,15 +1,34 @@
 /* .homepage {
 
 } */
-.homepage > .link-encrypt {
+.homepage > .links {
     text-align: center;
+    padding: 40px;
 }
-.homepage > .link-encrypt > a {
+.homepage > .links > * {
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 40px;
+    color: black;
     text-decoration: none;
 }
-.homepage > .link-encrypt > a:hover {
-    text-decoration: underline;
+/* .homepage > .links > * > .number {
+
+} */
+.homepage > .links > * > .arrow {
+    font-weight: bold;
 }
-.homepage > .link-encrypt > a:visited {
-    color: #0066CC;
+.homepage > .links > * > .image {
+    vertical-align: middle;
+}
+.image > img {
+    height: 1em;
+}
+
+.homepage > .description {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
