--- a/src/web-ui/src/navbar/index.css
+++ b/src/web-ui/src/navbar/index.css
@@ -14,10 +14,7 @@
     position: absolute;
     top: 3px;
     left: 3px;
-    bottom: 3px;
-}
-.navbar > .icon > img {
-    height: 100%;
+    height: calc(100% - 6px);
 }
 
 /* middle aligned header */
