--- a/src/web-ui/src/home/index.css
+++ b/src/web-ui/src/home/index.css
@@ -3,3 +3,10 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.homepage .periods-table-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 95%;
+}
